fix text alignment (#107)

--- a/src/client/styles/components/_TabItem.scss
+++ b/src/client/styles/components/_TabItem.scss
@@ -54,7 +54,7 @@
     color: $SEARCH_BLUE;
     content: '>';
     font-size: 32px;
-    right: 16px;
+    right: 24px;
     top: 8px;
     padding: 0 0 2px;
     position: absolute;
@@ -68,9 +68,8 @@
     appearance: none;
     min-width: 250px;
     margin: 0 auto;
-    padding: 16px 0;
+    padding: 16px 24px;
     float: left;
-    text-align-last: center;
 
     /* Styles */
     background: #fff;
